<resources>
    <string name="app_name">School Mangement</string>
    <string name="userName">User ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_signup_here">Don\'t have an account? SignUp Here</string>
    <string name="name">Name</string>
    <string name="signup">SignUp</string>
    <string name="confirm_password">Confirm password</string>
    <string name="job_provider">JOB PROVIDER</string>
    <string name="job_seeker">JOB SEEKER</string>
    <string name="guest">GUEST</string>
    <string name="select_user_type">SELECT USER TYPE</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="other">other</string>
    <string name="female">female</string>
    <string name="male">male</string>
    <string name="languages_known">Languages Known</string>
    <string name="hindi">Hindi</string>
    <string name="english">English</string>
    <string name="kannada">Kannada</string>
    <string name="telgu">Telgu</string>
    <string name="malyalam">Malyalam</string>
    <string name="tamil">Tamil</string>
    <string name="owner_name">Owner Name</string>
    <string name="enterprise_name">Enterprise Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="field">Field</string>
    <string name="part_time">Part Time</string>
    <string name="full_time">Full Time</string>
    <string name="permanent">Permanent</string>
    <string name="temporary">Temporary</string>
    <string name="contract">Contract</string>
    <string name="salary">Monthly Salary</string>
    <string name="requirements">Requirements</string>
    <string name="driving">Driving two wheeler vehicle</string>
    <string name="post_name">Available Post</string>
    <string name="job_category">Job Category</string>
    <string name="manager_name">Manger Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="address">Address</string>
    <string name="job_type">Job Type</string>
    <string name="proceed">Proceed</string>
    <string name="post">Post</string>
    <string name="target_tittle">Target Tittle</string>
    <string name="experience">Expericence</string>
    <string name="electrical">Electricals</string>
    <string name="hardware">Hardware and Tools</string>
    <string name="paint_and_sanitary">Paint and Sanitary</string>
    <string name="provisional_store">Provisional Store</string>
    <string name="fancy_store">Fancy Store</string>
    <string name="textile">Textile Store</string>
    <string name="glass">Glass and Plywood</string>
    <string name="wholesale">Wholesale Store</string>
    <string name="retail">Retailer Store</string>
    <string name="supplier">Supplier</string>
    <string name="driving2">Two Wheeler Driving</string>
    <string name="driving4">Four Wheeler Driving</string>
    <string name="skills">Skills</string>
    <string name="using_google_map">Using Google map</string>
    <string name="good_knowledge_about_locality">Good knowledge about Locality</string>
    <string name="state">State</string>
    <string name="submit">Submit</string>
    <string name="notice">NOTICE</string>
    <string name="attendance">ATTENDANCE</string>
    <string name="grades">GRADES</string>
    <string name="homework">Home Work</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="science">Science</string>
    <string name="maths">Mathematics</string>
    <string name="social">Social</string>
    <string name="total">Total</string>
    <string name="title_activity_teacher_login">teacher_login_activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dashboard">Dashboard</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>